--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,13 @@ config/local_env.yml
 
 # Ignore application configuration
 /config/application.yml
+
+*.sqlite3-journal
+
+db/development.sqlite3-journal
+
+db/development.sqlite3-journal
+
+db/development.sqlite3-journal
+
+*.sqlite3-journal
