updated navbar icons

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,15 +1,23 @@
 --- 
 DemPointsLogo.png: DemPointsLogo-c501c7a6c84ed38f201f2d7b55377e5c.png
 DemPointsLogo/index.png: DemPointsLogo-c501c7a6c84ed38f201f2d7b55377e5c.png
+Untitled-5.png: Untitled-5-96e28ad9fc70f1a9c25b5484d9635036.png
+Untitled-5/index.png: Untitled-5-96e28ad9fc70f1a9c25b5484d9635036.png
+companies.png: companies-a2272639a70f429584c80c49bf1fd0dd.png
+companies/index.png: companies-a2272639a70f429584c80c49bf1fd0dd.png
 error.png: error-e00fd89bb84dfd4fa676037ba10a6164.png
 error/index.png: error-e00fd89bb84dfd4fa676037ba10a6164.png
 favicon.ico: favicon-2a2fc26af16fa2bc458815833b88bd61.ico
 favicon/index.ico: favicon-2a2fc26af16fa2bc458815833b88bd61.ico
+qa.png: qa-f238400d81272575beba62713c0ca4b4.png
+qa/index.png: qa-f238400d81272575beba62713c0ca4b4.png
+star.png: star-2c803980b27a296e1f547443b1107a60.png
+star/index.png: star-2c803980b27a296e1f547443b1107a60.png
 whitelogo.png: whitelogo-bcebb729bc912ce31ff24307a05938fe.png
 whitelogo/index.png: whitelogo-bcebb729bc912ce31ff24307a05938fe.png
-application.js: application-77343f4062e9ac43d534a11d3c3057f0.js
-application/index.js: application-77343f4062e9ac43d534a11d3c3057f0.js
-application.css: application-506bd2741a961cfce5b0e4e253edf246.css
-application/index.css: application-506bd2741a961cfce5b0e4e253edf246.css
+application.js: application-f73f2a5330ddffc599679a01736fbe90.js
+application/index.js: application-f73f2a5330ddffc599679a01736fbe90.js
+application.css: application-1fefd3e0d1c6887c2ea391fe3a510d7d.css
+application/index.css: application-1fefd3e0d1c6887c2ea391fe3a510d7d.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
