updated navbar and comments on home page

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -3,6 +3,10 @@ DemPointsLogo.png: DemPointsLogo-c501c7a6c84ed38f201f2d7b55377e5c.png
 DemPointsLogo/index.png: DemPointsLogo-c501c7a6c84ed38f201f2d7b55377e5c.png
 Untitled-5.png: Untitled-5-96e28ad9fc70f1a9c25b5484d9635036.png
 Untitled-5/index.png: Untitled-5-96e28ad9fc70f1a9c25b5484d9635036.png
+arrow-left.png: arrow-left-5d3f12ddc33a0cee9c07e6ea08b1dfcb.png
+arrow-left/index.png: arrow-left-5d3f12ddc33a0cee9c07e6ea08b1dfcb.png
+arrow-right.png: arrow-right-ce0c5753290483a11691ee5c1a05409e.png
+arrow-right/index.png: arrow-right-ce0c5753290483a11691ee5c1a05409e.png
 companies.png: companies-a2272639a70f429584c80c49bf1fd0dd.png
 companies/index.png: companies-a2272639a70f429584c80c49bf1fd0dd.png
 error.png: error-e00fd89bb84dfd4fa676037ba10a6164.png
@@ -17,9 +21,9 @@ user.png: user-a0f9f6723f0e4d3763dec8eafe98562a.png
 user/index.png: user-a0f9f6723f0e4d3763dec8eafe98562a.png
 whitelogo.png: whitelogo-bcebb729bc912ce31ff24307a05938fe.png
 whitelogo/index.png: whitelogo-bcebb729bc912ce31ff24307a05938fe.png
-application.js: application-e1ad7d486d7885e9e24be74ed7beb8f1.js
-application/index.js: application-e1ad7d486d7885e9e24be74ed7beb8f1.js
-application.css: application-ad0628426cb3f2bed022b202518f0c6f.css
-application/index.css: application-ad0628426cb3f2bed022b202518f0c6f.css
+application.js: application-cf468939f2b3153b1e66aec7b4c45406.js
+application/index.js: application-cf468939f2b3153b1e66aec7b4c45406.js
+application.css: application-a2547ca7a3057cf38b5765741f2b8176.css
+application/index.css: application-a2547ca7a3057cf38b5765741f2b8176.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
