added test page 1

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -13,17 +13,23 @@ error.png: error-e00fd89bb84dfd4fa676037ba10a6164.png
 error/index.png: error-e00fd89bb84dfd4fa676037ba10a6164.png
 favicon.ico: favicon-2a2fc26af16fa2bc458815833b88bd61.ico
 favicon/index.ico: favicon-2a2fc26af16fa2bc458815833b88bd61.ico
+pins.png: pins-e3e51ed6700ef16d4baaef19defcaecd.png
+pins/index.png: pins-e3e51ed6700ef16d4baaef19defcaecd.png
 qa.png: qa-f238400d81272575beba62713c0ca4b4.png
 qa/index.png: qa-f238400d81272575beba62713c0ca4b4.png
+secrets.png: secrets-e78a625e8b8eb242f2ac9f031e37951c.png
+secrets/index.png: secrets-e78a625e8b8eb242f2ac9f031e37951c.png
 star.png: star-2c803980b27a296e1f547443b1107a60.png
 star/index.png: star-2c803980b27a296e1f547443b1107a60.png
+teepee.png: teepee-2d62ad2f7468d727f579f41f2c59b137.png
+teepee/index.png: teepee-2d62ad2f7468d727f579f41f2c59b137.png
 user.png: user-a0f9f6723f0e4d3763dec8eafe98562a.png
 user/index.png: user-a0f9f6723f0e4d3763dec8eafe98562a.png
 whitelogo.png: whitelogo-bcebb729bc912ce31ff24307a05938fe.png
 whitelogo/index.png: whitelogo-bcebb729bc912ce31ff24307a05938fe.png
 application.js: application-39a061144a0cf5ac72b7b64d473285f9.js
 application/index.js: application-39a061144a0cf5ac72b7b64d473285f9.js
-application.css: application-f635e913fa8f333bdfb93c6da02610b9.css
-application/index.css: application-f635e913fa8f333bdfb93c6da02610b9.css
+application.css: application-bbe35a3b10fa364e44631340e8e599a7.css
+application/index.css: application-bbe35a3b10fa364e44631340e8e599a7.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
